2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>

	* seahorse-key-manager.c: Fixed warnings during Key Manager
	startup. Bug #327657
	
2006-01-22  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Made gedit plugin and panel applet soft
	dependencies.
	* libseahorse/seahorse-context.c: Builds properly without 
	keyserver support.
	
2006-01-16  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * daemon/seahorse-sharing.c:
    * libseahorse/seahorse-dns-sd.c:
    * libseahorse/seahorse-dns-sd.h:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Moved DNS-SD code from 
    libhowl to Avahi. Bug #318707
    
2006-01-15  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-ssh-key.c:
    * plugins/applet/seahorse-applet.c: Bug #327038
    
2006-01-11  Adam Schreiber  <sadam@clemson.edu>

    * help/C/seahorse.xml:
    * libseahorse/seahorse-widget.c:
    * plugins/applet/docs/C/seahorse-applet.xml:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-key-properties.glade: Help buttons on
    key property windows now work.  The main help brings up the 
    introduction.  There have been wholesale revisions to the help
    docs.

2006-01-01  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-manager.c: Bug #325370

2005-12-29  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-properties.glade: Bug #325269

2005-12-27  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * plugins/applet/.cvsignore:
    * plugins/applet/seahorse-applet.c:
    * plugins/applet/seahorse-applet.h:
    * plugins/applet/docs/.cvsignore:
    * plugins/applet/docs/C/.cvsignore: Code cleanups

2005-12-23  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * data/seahorse.schemas.in:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-gconf.h: