@@ -279,6 +279,7 @@ create_auth_window (SeahorseAgentPassReq *pr)
     gtk_window_set_position (GTK_WINDOW (win), GTK_WIN_POS_CENTER);
     gtk_window_set_keep_above(GTK_WINDOW (win), TRUE);
     gtk_widget_show_all (win);
+    gtk_window_present (GTK_WINDOW (win));
     return win;
 }
 
