@@ -221,8 +221,8 @@ seahorse_pgp_source_init (SeahorsePGPSource *psrc)
     g_free (uri);
     
     if (res != GNOME_VFS_OK) {
-        psrc->pv->monitor_handle = NULL;        
-        g_return_if_reached ();
+        psrc->priv->monitor_handle = NULL;
+        g_warning ("couldn't monitor the GPG home directory: %s", gpg_homedir);
     }
 }
 
