@@ -1,5 +1,9 @@
 2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>
 
+	* Merged changes from seahorse-0-8 branch.
+
+2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>
+
 	* seahorse-key-manager.c: Fixed warnings during Key Manager
 	startup. Bug #327657
 	
